// Copyright IBM Corp. All Rights Reserved.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package tx.v1;

option go_package = "github.com/sykesm/batik/pkg/pb/tx/v1;txv1";

import "google/api/annotations.proto";
import "tx/v1/transaction.proto";

// SubmitAPI submits transactions for validation and commit processing.
//
// NOTE: This service temporary and is not intended to be long lived.
service SubmitAPI {
  // Submit submits a transaction for validation and commit processing.
  // NOTE: This is an implementation for prototyping.
  rpc Submit(SubmitRequest) returns (SubmitResponse) {
    option (google.api.http) = {
      post: "/v1/submit/{namespace}"
      body: "signed_transaction"
    };
  }
}

// SubmitRequest contains a Transaction.
message SubmitRequest {
  string namespace = 1;
  SignedTransaction signed_transaction = 2;
}

// SubmitResponse returns the unique identifier for the transaction that was
// submitted.
message SubmitResponse {
  bytes txid = 1;
}

